<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="9"
    android:layout_gravity="center"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <!--Primera fila de botones-->
    <TextView
        android:id="@+id/jugadores"
        android:layout_columnSpan="4"
        android:layout_gravity="center"
        android:text="@string/puntuacion"
        android:textSize="40sp"
        android:textColor="@android:color/black"/>

    <!--Segunda fila de botones-->
    <TextView
        android:id="@+id/totalPuntos"
        android:layout_columnSpan="4"
        android:layout_gravity="center"
        android:text="@string/totalPuntos"
        android:textSize="40sp"
        android:textColor="@android:color/black"/>

    <!--Tercera fila de botones-->
    <Button
        android:id="@+id/n1"
        android:layout_marginTop="10dp"
        android:text="@string/n1"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n2"
        android:layout_marginTop="10dp"
        android:text="@string/n2"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n3"
        android:layout_marginTop="10dp"
        android:text="@string/n3"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n4"
        android:layout_marginTop="10dp"
        android:text="@string/n4"
        android:textSize="25sp"/>

    <!-- Cuarta fila de botones -->
    <Button
        android:id="@+id/n5"
        android:layout_marginTop="10dp"
        android:text="@string/n5"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n6"
        android:layout_marginTop="10dp"
        android:text="@string/n6"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/n7"
        android:layout_marginTop="10dp"
        android:text="@string/n7"
        android:textSize="25sp" />
    <Button
        android:id="@+id/n8"
        android:layout_marginTop="10dp"
        android:text="@string/n8"
        android:textSize="25sp"/>

    <!-- Quinta fila de botones -->
    <Button
        android:id="@+id/n9"
        android:layout_marginTop="10dp"
        android:text="@string/n9"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n10"
        android:layout_marginTop="10dp"
        android:text="@string/n10"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n11"
        android:layout_marginTop="10dp"
        android:text="@string/n11"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n12"
        android:layout_marginTop="10dp"
        android:text="@string/n12"
        android:textSize="25sp"/>

    <!-- "Sexta fila de botones -->
    <Button
        android:id="@+id/n13"
        android:layout_marginTop="10dp"
        android:text="@string/n13"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n14"
        android:layout_marginTop="10dp"
        android:text="@string/n14"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n15"
        android:layout_marginTop="10dp"
        android:text="@string/n15"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n16"
        android:layout_marginTop="10dp"
        android:text="@string/n16"
        android:textSize="25sp"/>

    <!-- Septima fila de botones -->
    <Button
        android:id="@+id/n17"
        android:layout_marginTop="10dp"
        android:text="@string/n17"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n18"
        android:layout_marginTop="10dp"
        android:text="@string/n18"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n19"
        android:layout_marginTop="10dp"
        android:text="@string/n19"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/n20"
        android:layout_marginTop="10dp"
        android:text="@string/n20"
        android:textSize="25sp"/>

    <!-- Octava fila de botones -->
    <Button
        android:id="@+id/n25"
        android:layout_marginTop="10dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/n25"
        android:textSize="25sp" />

    <Button
        android:id="@+id/n50"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_marginTop="10dp"
        android:text="@string/n50"
        android:textSize="25sp" />

    <!-- Novena fila de botones -->
    <Button
        android:id="@+id/doble"
        android:layout_marginTop="10dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:background="@color/negro"
        android:text="@string/doble"
        android:textColor="@color/blanco"
        android:textSize="25sp" />

    <Button
        android:id="@+id/triple"
        android:layout_marginTop="10dp"
        android:layout_columnSpan="2"
        android:layout_marginLeft="4dp"
        android:layout_gravity="fill"
        android:text="@string/triple"
        android:textColor="@color/blanco"
        android:background="@color/rojo"
        android:textSize="25sp" />

    <Button
        android:id="@+id/reinicio"
        android:layout_width="49dp"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/reinicio"
        android:textSize="25sp" />

    <Button
        android:id="@+id/jugador1"
        android:layout_width="49dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/jugador1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/jugador2"
        android:layout_width="49dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/jugador2"
        android:textSize="25sp" />


</GridLayout>