<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/listado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listado"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="103dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/jugador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/jugador1"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="232dp" />

    <TextView
        android:id="@+id/puntuacion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/puntuacion1"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/jugador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/jugador2"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/puntuacion2"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:text="@string/puntuacion2"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="377dp" />


</androidx.constraintlayout.widget.ConstraintLayout>